--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Pushkarajk1992/todolistapp",
+  "homepage": "https://Pushkarajk1992.github.io/todolistapp",
   "name": "blog1",
   "version": "0.1.0",
   "private": true,
